CKAD/Practice/Killer.sh/simulators/1/pod6.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod6
  name: pod6
spec:
  containers:
  - command:
    - sh
    - -c
    - touch /tmp/ready && sleep 1d
    readinessProbe:
      exec:
        command:
        - cat /tmp/ready
      initialDelaySeconds: 5
      periodSeconds: 10
    image: busybox:1.31.0
    name: pod6
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
