CKAD/Practice/Killer.sh/simulators/1/project-earthflower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: project-earthflower
  name: project-earthflower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-earthflower
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: project-earthflower
    spec:
      volumes:
      - name: project-data
        persistentVolumeClaim:
          claimName: earth-project-earthflower-pvc
      containers:
      - image: httpd:2.4.41-alpine
        name: httpd
        volumeMounts:
        - name: project-data
          mountPath: /tmp/project-data
        resources: {}
status: {}
