CKAD/Practice/Killer.sh/simulators/1/netpol-egr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: ckad-practice
spec:
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
    ports:
    - protocol: TCP
      port: 9000
  - ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
